--- a/index.html
+++ b/index.html
@@ -6,15 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="shortcut icon" href="img/pa_8UT_icon.ico">
+    <link rel="icon" href="img/pa_8UT_icon.ico">
+
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/font.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 <body>
+    <div id="popupNAV">
+        <nav>
+            <div class="burger">
+                <div class="navbar"></div>
+                <div class="navbar"></div>
+                <div class="navbar"></div>
+                <div class="navbar"></div>
+            </div>
+            <div class="gnb">
+                <li><a href="#" dataNum="0">section1</a></li>
+                <li><a href="#" dataNum="1">section2</a></li>
+                <li><a href="#" dataNum="2">section3</a></li>
+                <li><a href="#" dataNum="3">section4</a></li>
+                <li><a href="#" dataNum="4">section5</a></li>
+                <li><a href="#" dataNum="5">section6</a></li>
+            </div>
+        </nav>
+    <!-- </div>
+    <ul class="gnb">
+        <li><a href="#" dataNum = '0'>section1</a></li>
+        <li><a href="#" dataNum = '1'>section2</a></li>
+        <li><a href="#" dataNum = '2'>section3</a></li>
+        <li><a href="#" dataNum = '3'>section4</a></li>
+        <li><a href="#" dataNum = '4'>section5</a></li>
+        <li><a href="#" dataNum = '5'>section6</a></li>
+    </ul> -->
     <div id="wrap">
         <section>
-            <h3>Portfolio</h3>
-            <p>어쩌고저쩌고</p>
+            <h3 class="pptitle">
+                <div>Portfolio</div>
+                <div>얍</div>
+                <div>나와라</div>
+                  </h3>
+            <p>
+                <div>어쩌고</div>
+                <div>저쩌고</div>
+                </p>
         </section>
         <section>
             <div class="left">
@@ -26,6 +64,7 @@
         </section>
         <section>
             <div class="left">
+                
                 <div class="title">
                     01 <strong> name card  </strong>
                 </div>
@@ -65,6 +104,6 @@
         <section></section>
         <section></section>
     </div>
-    
+    <script src="js/script.js"></script>
 </body>
 </html>
